// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extend index management ilm banner extension should return extension when any index has lifecycle error 1`] = `
Object {
  "action": Object {
    "buttonLabel": "Retry lifecycle step",
    "indexNames": Array [
      "testy3",
    ],
    "requestMethod": [Function],
    "successMessage": "Called retry lifecycle step for: \\"testy3\\"",
  },
  "filter": Query {
    "ast": _AST {
      "_clauses": Array [
        Object {
          "field": "ilm.step",
          "match": "must",
          "operator": "eq",
          "type": "field",
          "value": "ERROR",
        },
      ],
      "_indexedClauses": Object {
        "field": Object {
          "ilm.step": Array [
            Object {
              "field": "ilm.step",
              "match": "must",
              "operator": "eq",
              "type": "field",
              "value": "ERROR",
            },
          ],
        },
        "group": Array [],
        "is": Object {},
        "term": Array [],
      },
    },
    "syntax": Object {
      "parse": [Function],
      "print": [Function],
      "printClause": [Function],
    },
    "text": "ilm.step:ERROR",
  },
  "filterLabel": "Show errors",
  "title": "1
          index has
          lifecycle errors",
  "type": "warning",
}
`;

exports[`extend index management ilm filter extension should return extension when any index has lifecycle policy 1`] = `
Array [
  Object {
    "field": "ilm.managed",
    "multiSelect": false,
    "name": "Lifecycle status",
    "options": Array [
      Object {
        "value": true,
        "view": "Managed",
      },
      Object {
        "value": false,
        "view": "Unmanaged",
      },
    ],
    "type": "field_value_selection",
  },
  Object {
    "autoSortOptions": false,
    "field": "ilm.phase",
    "multiSelect": "or",
    "name": "Lifecycle phase",
    "options": Array [
      Object {
        "value": "hot",
        "view": "Hot",
      },
      Object {
        "value": "warm",
        "view": "Warm",
      },
      Object {
        "value": "frozen",
        "view": "Frozen",
      },
      Object {
        "value": "cold",
        "view": "Cold",
      },
      Object {
        "value": "delete",
        "view": "Delete",
      },
    ],
    "type": "field_value_selection",
  },
]
`;

exports[`extend index management ilm summary extension should render a phase definition panel when lifecycle has phase definition 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-m-m-plain-hasBorder"
      data-test-subj="policyPropertiesPanel"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiText emotion-euiText-xs"
          >
            <h3>
              Lifecycle policy
            </h3>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <a
            class="euiLink emotion-euiLink-primary"
            href="management/data/index_lifecycle_management//policies/edit/testy"
            rel="noopener noreferrer"
            target="_blank"
          >
            Edit policy in ILM
            <span
              class="emotion-EuiExternalLinkIcon"
              data-euiicon-type="popout"
              role="presentation"
            />
            <span
              class="emotion-euiScreenReaderOnly"
            >
              (external, opens in a new tab or window)
            </span>
          </a>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-column-left-m-s"
        data-type="responsiveColumn"
        style="grid-template-columns: 1fr 1fr;"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Policy name
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          testy
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current phase
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          <span
            class="euiBadge emotion-euiBadge"
            style="--euiBadgeBackgroundColor: #F6726A; --euiBadgeTextColor: #07101F;"
            title="Hot"
          >
            <span
              class="euiBadge__content emotion-euiBadge__content"
            >
              <span
                class="euiBadge__text emotion-euiBadge__text"
              >
                Hot
              </span>
            </span>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current action
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          <code>
            rollover
          </code>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current action time
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          2018-12-07 13:02:55
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current step
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          <code>
            test
          </code>
        </dd>
      </dl>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-3"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-m-m-plain-hasBorder"
      data-test-subj="phaseDefinitionPanel"
    >
      <div
        class="euiText emotion-euiText-xs"
      >
        <h3>
          Current phase definition
        </h3>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <div>
        <pre>
          <code
            data-code-language="json"
          >
            {
  "policy": "testy",
  "phase_definition": {
    "min_age": "0s",
    "actions": {
      "rollover": {
        "max_size": "1gb"
      }
    }
  },
  "version": 1,
  "modified_date_in_millis": 1544031699844
}
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`extend index management ilm summary extension should render a step info panel when lifecycle is waiting for a step completion 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-m-m-plain-hasBorder"
      data-test-subj="policyPropertiesPanel"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiText emotion-euiText-xs"
          >
            <h3>
              Lifecycle policy
            </h3>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <a
            class="euiLink emotion-euiLink-primary"
            href="management/data/index_lifecycle_management//policies/edit/testy"
            rel="noopener noreferrer"
            target="_blank"
          >
            Edit policy in ILM
            <span
              class="emotion-EuiExternalLinkIcon"
              data-euiicon-type="popout"
              role="presentation"
            />
            <span
              class="emotion-euiScreenReaderOnly"
            >
              (external, opens in a new tab or window)
            </span>
          </a>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-column-left-m-s"
        data-type="responsiveColumn"
        style="grid-template-columns: 1fr 1fr;"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Policy name
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          testy
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current phase
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          <span
            class="euiBadge emotion-euiBadge"
            style="--euiBadgeBackgroundColor: #F6726A; --euiBadgeTextColor: #07101F;"
            title="Hot"
          >
            <span
              class="euiBadge__content emotion-euiBadge__content"
            >
              <span
                class="euiBadge__text emotion-euiBadge__text"
              >
                Hot
              </span>
            </span>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current action
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          <code>
            rollover
          </code>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current action time
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          2018-12-07 13:02:55
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current step
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          <code>
            test
          </code>
        </dd>
      </dl>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-3"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-m-m-plain-hasBorder"
      data-test-subj="policyStepPanel"
    >
      <div
        class="euiText emotion-euiText-xs"
      >
        <h3>
          Current step info
        </h3>
        <div
          class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
        />
        <div>
          <pre>
            <code
              data-code-language="json"
            >
              {
  "message": "Waiting for all shard copies to be active",
  "shards_left_to_allocate": -1,
  "all_shards_active": false,
  "number_of_replicas": 2
}
            </code>
          </pre>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
    />
  </div>
</div>
`;

exports[`extend index management ilm summary extension should render an error panel when index has lifecycle error 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-m-m-plain-hasBorder"
      data-test-subj="policyPropertiesPanel"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiText emotion-euiText-xs"
          >
            <h3>
              Lifecycle policy
            </h3>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <a
            class="euiLink emotion-euiLink-primary"
            href="management/data/index_lifecycle_management//policies/edit/testy"
            rel="noopener noreferrer"
            target="_blank"
          >
            Edit policy in ILM
            <span
              class="emotion-EuiExternalLinkIcon"
              data-euiicon-type="popout"
              role="presentation"
            />
            <span
              class="emotion-euiScreenReaderOnly"
            >
              (external, opens in a new tab or window)
            </span>
          </a>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-column-left-m-s"
        data-type="responsiveColumn"
        style="grid-template-columns: 1fr 1fr;"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Policy name
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          testy
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current phase
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          <span
            class="euiBadge emotion-euiBadge"
            style="--euiBadgeBackgroundColor: #F6726A; --euiBadgeTextColor: #07101F;"
            title="Hot"
          >
            <span
              class="euiBadge__content emotion-euiBadge__content"
            >
              <span
                class="euiBadge__text emotion-euiBadge__text"
              >
                Hot
              </span>
            </span>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current action
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          <code>
            rollover
          </code>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current action time
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          2018-12-07 13:02:55
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current step
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          <code>
            ERROR
          </code>
        </dd>
      </dl>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-3"
  >
    <div
      class="euiPanel euiPanel--danger euiPanel--paddingMedium emotion-euiPanel-m-m-danger"
      data-test-subj="policyErrorPanel"
    >
      <div
        class="euiText emotion-euiText-xs"
      >
        <h3>
          Lifecycle error
        </h3>
        <div
          class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
        />
        <div>
          <pre>
            <code
              data-code-language="json"
            >
              {
  "failed_step": "check-rollover-ready",
  "step_info": {
    "type": "illegal_argument_exception",
    "reason": "setting [index.lifecycle.rollover_alias] for index [testy3] is empty or not defined"
  }
}
            </code>
          </pre>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
    />
  </div>
</div>
`;

exports[`extend index management ilm summary extension should render the tab when index has lifecycle policy 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-m-m-plain-hasBorder"
      data-test-subj="policyPropertiesPanel"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiText emotion-euiText-xs"
          >
            <h3>
              Lifecycle policy
            </h3>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <a
            class="euiLink emotion-euiLink-primary"
            href="management/data/index_lifecycle_management//policies/edit/testy"
            rel="noopener noreferrer"
            target="_blank"
          >
            Edit policy in ILM
            <span
              class="emotion-EuiExternalLinkIcon"
              data-euiicon-type="popout"
              role="presentation"
            />
            <span
              class="emotion-euiScreenReaderOnly"
            >
              (external, opens in a new tab or window)
            </span>
          </a>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
      />
      <dl
        class="euiDescriptionList emotion-euiDescriptionList-column-left-m-s"
        data-type="responsiveColumn"
        style="grid-template-columns: 1fr 1fr;"
      >
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Policy name
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          testy
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current phase
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          <span
            class="euiBadge emotion-euiBadge-default"
            title="new"
          >
            <span
              class="euiBadge__content emotion-euiBadge__content"
            >
              <span
                class="euiBadge__text emotion-euiBadge__text"
              >
                new
              </span>
            </span>
          </span>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current action
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          <code>
            complete
          </code>
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current action time
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          2018-12-07 13:02:55
        </dd>
        <dt
          class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
        >
          Current step
        </dt>
        <dd
          class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
        >
          <code>
            complete
          </code>
        </dd>
      </dl>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-3"
  />
</div>
`;

exports[`extend index management remove lifecycle action extension should return extension when all indices have lifecycle policy 1`] = `
Object {
  "buttonLabel": "Remove lifecycle policy",
  "icon": "stopFilled",
  "indexNames": Array [
    Array [
      "testy3",
      "testy3",
    ],
  ],
  "renderConfirmModal": [Function],
}
`;

exports[`extend index management retry lifecycle action extension should return extension when all indices have lifecycle errors 1`] = `
Object {
  "buttonLabel": "Retry lifecycle step",
  "icon": "play",
  "indexNames": Array [
    Array [
      "testy3",
      "testy3",
    ],
  ],
  "requestMethod": [Function],
  "successMessage": "Called retry lifecycle step for: \\"testy3\\", \\"testy3\\"",
}
`;
